--- a/styles/globals.css
+++ b/styles/globals.css
@@ -26,3 +26,17 @@ li {
   list-style-type: none;
   color: #FFFFFF;
 }
+
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+::-webkit-scrollbar-track {
+  background: #FF1C6E;
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  background: linear-gradient(180deg, #00c6fb, #005bea);
+}
