--- a/styles/Cards.module.css
+++ b/styles/Cards.module.css
@@ -19,7 +19,7 @@
 
 .cards__block:hover {
     transform: translateY(-10px);
-
+    box-shadow: 4px 6px 8px 10px rgba(0, 144, 255, 0.2);
 }
 
 .card__info {
@@ -64,4 +64,26 @@
     width: 240px;
     height: 240px;
     opacity: 0.7;
+}
+
+.btns {
+    display: flex;
+    align-items: center;
+    gap: 40px;
+    margin-top: 30px;
+}
+
+.btn {
+    padding: 8px 20px;
+    background-color: #575DFF;
+    cursor: pointer;
+    color: #FFFFFF;
+    border-radius: 10px;
+    transition: 0.6s all ease;
+    border: none;
+}
+
+.btn:hover {
+    background-color: #1e0b4b;
+    transform: scale(1.1);
 }
